--- a/SinglePlayer.html
+++ b/SinglePlayer.html
@@ -32,11 +32,11 @@
 		<p>Bank Balance: £<span id="bank-balance">1000</span></p>
 
 
-		<button id="bet-10" onclick="place_bet(10)">Bet £10</button>
-		<button id="bet-20" onclick="place_bet(20)">Bet £20</button>
-		<button id="bet-30" onclick="place_bet(30)">Bet £30</button>
-		<button id="bet-40" onclick="place_bet(40)">Bet £40</button>
-		<button id="bet-50" onclick="place_bet(50)">Bet £50</button>
+		<button id="bet-10">Bet £10</button>
+		<button id="bet-20">Bet £20</button>
+		<button id="bet-30">Bet £30</button>
+		<button id="bet-40">Bet £40</button>
+		<button id="bet-50">Bet £50</button>
 		
 		<button id="new-game">New Game</button>
 		<button id="new-round">New Round</button>
