--- a/high_or_low.html
+++ b/high_or_low.html
@@ -25,6 +25,7 @@
 		
 		<button id="higher">Higher</button>
 		<button id="lower">Lower</button>
+		<button id="same">Same</button>
 		<button id="next">Next Card</button>
 		
 		
