--- a/how_to_play.html
+++ b/how_to_play.html
@@ -28,10 +28,13 @@
 			You can win the round in two ways. The first is to reach exactly 21, whilst the dealer fails to do so, whether they go over or remain under. 
 			The other way to win, is to get closer to 21 than the dealer, while still not going over. 
 			<br>
-			Most cards value is equal to the number on the card. So, for example, the 2 of clubs, will add 2 to the total, or the 8 of diamonds will add 8.
+			The value of most cards is equal to the number on the card. So, for example, the 2 of clubs, will add 2 to the total, or the 8 of diamonds will add 8.
 			However, there are exceptions to this, as not all playing cards, have numbers on them. Jacks, Queens and Kings (J, Q and K respectively) all add 10 to the total. 
 			The other card to note are the aces (A). These cards initillay count for 11, however, if you were to draw another card, which would take your total over 21, then the ace
 			changes value to 1. Meaning you may be able to take additional risks if you have an ace in your hand.
+			<br>
+			If you win a round, any money that you bet will be doubled, but if you lose a round, the money you bet is lost. If you were to lose all of your money, you can press the "New Game" button, 
+			followed by the "New Round" button, starting a new round, with you having the default amount of money.
 		<p>
 		
 		<h2>Higher or Lower?</h2>
@@ -42,7 +45,7 @@
 			This game also requires taking risks. You may have a low number relative to the rest, however, it could still be higher than the hidden card. So, although there may be a higher likelihood it is lower, it is never guarenteed.
 			<br>
 			In this game, all number cards have a value equal to their respective number. However, the Aces, Jacks, Queens and Kings are slightly different. Aces (A), are always equal to 1 in this game. 
-			Jacks (J), are worth 11, Queens (Q), are worth 12, and Kinga (K), are worth 13. this means the range of numbers is 1 - 13 
+			Jacks (J), are worth 11, Queens (Q), are worth 12, and Kings (K), are worth 13. this means the range of numbers is 1 - 13 
 		</p> 
 		</div>
 		
